cmake_minimum_required(VERSION 3.27)
project(untitled11)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled11 main.cpp
        User.cpp
        Date.cpp
        Account.cpp
        SavingsAccount.cpp
        CreditAccount.cpp
        FinancialProduct.cpp
        Bank.cpp
        Accumulator.cpp
        Accumulator.cpp
        CheckingAccount.h
        CheckingAccount.cpp)
